alignment issues fixed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -97,12 +97,13 @@ h3 {
 
 .flex-inner {
   /*width: 25vw;*/
-  align-self: center;
+  /*align-self: center;*/
   display:flex;
   justify-content:center;
   align-items:center;
   margin: 0 1rem 1rem 0;
   position: relative;
+  flex-direction: column;
 }
 
 .flex-reverse {
@@ -231,6 +232,9 @@ h3 {
   left: 0;
   right: 0;
   z-index: 0;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-evenly;
 }
 
 .results-table {
